Fixed Page Number Alignment

--- a/src/less/ebook/overrides.less
+++ b/src/less/ebook/overrides.less
@@ -104,3 +104,25 @@ html {
   font-size: 1em;
   white-space: pre-wrap;
 }
+
+.pdf-footer {
+  table, tr, td {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
+  table {
+    width: 100%;
+    border-top: 1px solid #eee;
+    td {
+      padding: 10px 0;
+      color: #aaa;
+      text-align: left;
+      &.footer-pages-count {
+        float: none;
+        text-align: right;
+        font-weight: bold;
+      }
+    }
+  }
+}
